[workspace]
resolver = "2"
default-members = ["apollo-router", "apollo-federation"]
members = [
    "apollo-router",
    "apollo-router-benchmarks",
    "apollo-router-scaffold",
    "apollo-router-scaffold/scaffold-test",
    "apollo-federation",
    "apollo-federation/cli",
    "examples/add-timestamp-header/rhai",
    "examples/async-auth/rust",
    "examples/cache-control/rhai",
    "examples/context/rust",
    "examples/cookies-to-headers/rhai",
    "examples/data-response-mutate/rhai",
    "examples/error-response-mutate/rhai",
    "examples/forbid-anonymous-operations/rhai",
    "examples/forbid-anonymous-operations/rust",
    "examples/hello-world/rust",
    "examples/jwt-claims/rhai",
    "examples/logging/rhai",
    "examples/op-name-to-header/rhai",
    "examples/status-code-propagation/rust",
    "examples/subgraph-request-log/rhai",
    "examples/supergraph-sdl/rust",
    "examples/surrogate-cache-key/rhai",
    "examples/coprocessor-subgraph/rust",
    "examples/throw-error/rhai",
    "fuzz",
    "fuzz/subgraph",
    # Note that xtask is not in the workspace member because it relies on dependencies that are incompatible with the router. Notably hyperx but there are others.
]

# this makes build scripts and proc macros faster to compile
[profile.dev.build-override]
# If you un-comment the next line with 1.60.0, compile fails on circle-ci linux
# debug = false
strip = "debuginfo"
incremental = false

# If building a dhat feature, you must use this profile
# e.g. heap allocation tracing: cargo build --profile release-dhat --features dhat-heap
# e.g. heap and ad-hoc allocation tracing: cargo build --profile release-dhat --features dhat-heap,dhat-ad-hoc
[profile.release-dhat]
inherits = "release"
debug = 1

# Dependencies used in more than one place are specified here in order to keep versions in sync:
# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-dependencies-table
[workspace.dependencies]
apollo-compiler = "=1.0.0-beta.21"
apollo-parser = "0.8.0"
apollo-smith = "0.11.0"
async-trait = "0.1.77"
hex = { version = "0.4.3", features = ["serde"] }
http = "0.2.11"
insta = { version = "1.38.0", features = ["json", "redactions", "yaml"] }
once_cell = "1.19.0"
reqwest = { version = "0.11.24", default-features = false, features = [
    "rustls-tls",
    "rustls-native-certs",
    "gzip",
    "json",
    "stream",
] }

schemars = { version = "0.8.16", features = ["url"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = { version = "1.0.114", features = [
    "preserve_order",
    "float_roundtrip",
] }
serde_json_bytes = { version = "0.2.4", features = ["preserve_order"] }
sha1 = "0.10.6"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
