[workspace]
resolver = "2"
default-members = ["apollo-router-core"]
members = [
    "apollo-router-core",
    "apollo-federation",
    "apollo-router-error-derive",
    "apollo-router-error",
    # Note that xtask is not in the workspace member because it relies on dependencies that are incompatible with the router. Notably hyperx but there are others.
]

# this makes build scripts and proc macros faster to compile
[profile.dev.build-override]
# If you un-comment the next line with 1.60.0, compile fails on circle-ci linux
# debug = false
strip = "debuginfo"
incremental = false

# If building a dhat feature, you must use this profile
# e.g. heap allocation tracing: cargo build --profile release-dhat --features dhat-heap
# e.g. heap and ad-hoc allocation tracing: cargo build --profile release-dhat --features dhat-heap,dhat-ad-hoc
[profile.release-dhat]
inherits = "release"
debug = 1

# Dependencies used in more than one place are specified here in order to keep versions in sync:
# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-dependencies-table
[workspace.dependencies]
apollo-compiler = "1.28.0"
apollo-parser = "0.8.4"
apollo-smith = "0.15.0"
async-trait = "0.1.77"
hex = { version = "0.4.3", features = ["serde"] }
http = "1.1.0"
insta = { version = "1.38.0", features = [
    "json",
    "redactions",
    "yaml",
    "glob",
] }
once_cell = "1.19.0"
reqwest = { version = "0.12.0", default-features = false }

schemars = { version = "0.8.22", features = ["url"] }
serde = { version = "1.0.198", features = ["derive", "rc"] }
serde_json = { version = "1.0.114", features = [
    "preserve_order",
    "float_roundtrip",
] }
serde_json_bytes = { version = "0.2.5", features = ["preserve_order"] }
similar = { version = "2.5.0", features = ["inline"] }
sha1 = "0.10.6"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
