[package]
name = "apollo-federation"
version = "2.0.0-alpha.7"
authors = ["The Apollo GraphQL Contributors"]
edition = "2021"
description = "Apollo Federation"
documentation = "https://docs.rs/apollo-federation"
repository = "https://github.com/apollographql/router"
license = "Elastic-2.0"
autotests = false                                      # Integration tests are modules of tests/main.rs

[features]
# This feature adds the `#[instrument]` macro to many function as well as
# logging statements that capture serialized versions of key data structures.
# This logging is gated behind a feature to avoid any unnecessary (even if
# small) runtime costs where this data will not be desired.
snapshot_tracing = ["ron"]

[dependencies]
apollo-compiler.workspace = true
time = { version = "0.3.34", default-features = false, features = [
    "local-offset",
] }
derive_more = "0.99.17"
http.workspace = true
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = "0.13.0"
lazy_static = "1.4.0"
line-col = "0.2.1"
multimap = "0.10.0"
nom = "7.1.3"
petgraph = { version = "0.6.4", features = ["serde-1"] }
serde.workspace = true
serde_json.workspace = true
serde_json_bytes.workspace = true
strum = "0.26.0"
strum_macros = "0.26.0"
thiserror = "1.0"
url = "2"
either = "1.12"
tracing = "0.1.40"
ron = { version = "0.8.1", optional = true }
nom_locate = "4.2.0"

[dev-dependencies]
hex.workspace = true
insta.workspace = true
sha1.workspace = true
tempfile.workspace = true
pretty_assertions = "1.4.0"
rstest = "0.22.0"

[[test]]
name = "main"
