[package]
name = "apollo-federation"
version = "2.9.0-rc.1"
authors = ["The Apollo GraphQL Contributors"]
edition = "2024"
description = "Apollo Federation"
documentation = "https://docs.rs/apollo-federation"
repository = "https://github.com/apollographql/router"
license = "Elastic-2.0"
autotests = false                                      # Integration tests are modules of tests/main.rs

[features]
# This feature adds the `#[instrument]` macro to many function as well as
# logging statements that capture serialized versions of key data structures.
# This logging is gated behind a feature to avoid any unnecessary (even if
# small) runtime costs where this data will not be desired.
snapshot_tracing = ["ron"]
# `correctness` feature enables the `correctness` module.
correctness = []

[dependencies]
apollo-compiler.workspace = true
time = { version = "0.3.34", default-features = false, features = [
  "local-offset",
] }
derive_more = { version = "2.0.0", features = [
  "display",
  "from",
  "is_variant",
] }
encoding_rs.workspace = true
http.workspace = true
hashbrown = "0.16.0"
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = "0.14.0"
line-col = "0.2.1"
levenshtein = "1"
multimap = "0.10.0"
multi_try = "0.3.0"
nom = "7.1.3"
nom_locate = "4.2.0"
percent-encoding = "2.3.1"
petgraph = { version = "0.8.0", features = ["serde-1"] }
regex = "1.11.1"
serde.workspace = true
serde_json.workspace = true
serde_json_bytes.workspace = true
strum = "0.27.0"
strum_macros = "0.27.0"
thiserror = "2.0"
url = "2"
either = "1.13.0"
tracing = "0.1.40"
ron = { version = "0.12.0", optional = true }
shape = "0.6.0"
form_urlencoded = "1.2.1"
parking_lot = "0.12.4"
mime = "0.3.17"

[dev-dependencies]
diff = "0.1.13"
hex.workspace = true
insta.workspace = true
sha1.workspace = true
similar.workspace = true
tempfile.workspace = true
pretty_assertions = "1.4.0"
rstest = "0.26.0"
dhat = "0.3.3"
test-log = { version = "0.2.16", default-features = false, features = [
  "trace",
] }
# workaround for https://github.com/rust-lang/cargo/issues/2911
apollo-federation = { path = ".", features = ["correctness"] }

[[test]]
name = "main"

[[test]]
name = "connectors_validation_profiling"
path = "tests/dhat_profiling/connectors_validation.rs"

[[test]]
name = "supergraph_creation_profiling"
path = "tests/dhat_profiling/supergraph.rs"

[[test]]
name = "query_plan_creation_profiling"
path = "tests/dhat_profiling/query_plan.rs"
