[package]
name = "apollo-router-benchmarks"
version = "1.10.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2021"
license = "Elastic-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
apollo-router = { path = "../apollo-router" }
criterion = { version = "0.4", features = ["async_tokio", "async_futures"] }
futures = "0.3"
memory-stats = "1.1.0"
once_cell = "1"
serde_json = { version = "1", features = ["preserve_order"] }
serde_json_bytes = { version = "0.2.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
async-trait = "0.1"
tower = "0.4"

[build-dependencies]
apollo-smith = { version = "0.3.2", features = ["parser-impl"] }
apollo-parser = "0.4.1"
arbitrary = "1.2.3"

[[bench]]
name = "basic_composition"
harness = false

[[bench]]
name = "memory_use"
harness = false
