[package]
name = "apollo-router-benchmarks"
version = "1.30.1"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2021"
license = "Elastic-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
apollo-router = { path = "../apollo-router" }
criterion = { version = "0.5", features = ["async_tokio", "async_futures"] }
memory-stats = "1.1.0"
once_cell = "1"
serde_json = { version = "1", features = ["preserve_order", "float_roundtrip"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"

[build-dependencies]
apollo-smith = { version = "0.4.0", features = ["parser-impl"] }
apollo-parser = "0.6.2"
arbitrary = "1.3.0"

[[bench]]
name = "basic_composition"
harness = false

[[bench]]
name = "memory_use"
harness = false
