[package]
name = "apollo-router-benchmarks"
version = "1.45.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2021"
license = "Elastic-2.0"
publish = false

[dev-dependencies]
apollo-router = { path = "../apollo-router" }
criterion = { version = "0.5", features = ["async_tokio", "async_futures"] }
memory-stats = "1.1.0"
once_cell.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[build-dependencies]
apollo-smith.workspace = true
apollo-parser.workspace = true
arbitrary = "1.3.2"

[[bench]]
name = "basic_composition"
harness = false

[[bench]]
name = "memory_use"
harness = false
