[package]
name = "apollo-router-core"
version = "0.1.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
repository = "https://github.com/apollographql/router-core/"
documentation = "https://docs.rs/apollo-router-core"
description = "A configurable, high-performance routing runtime for Apollo Federation 🚀"
license = "Elastic-2.0"
edition = "2024"

[dependencies]
apollo-compiler.workspace = true
apollo-federation = { path = "../apollo-federation" }
bytes = "1.10.1"
futures = "0.3"
http-body = "1.0.1"
http-body-util = "0.1.3"
http.workspace = true
serde_json.workspace = true
thiserror = "2.0"
tower.workspace = true
quick_cache = "0.6.14"
[dev-dependencies]
mry = "0.14.0"