[package]
name = "apollo-router-core"
version = "0.1.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
repository = "https://github.com/apollographql/router-core/"
documentation = "https://docs.rs/apollo-router-core"
description = "A configurable, high-performance routing runtime for Apollo Federation 🚀"
license = "Elastic-2.0"
edition = "2024"

[dependencies]
apollo-compiler.workspace = true
apollo-federation = { path = "../apollo-federation" }
bytes = "1.10.1"
futures = "0.3"
http-body = "1.0.1"
http-body-util = { version = "0.1.3", features = ["full"] }
http.workspace = true
serde_json.workspace = true
thiserror = "2.0"
tower.workspace = true
tokio = { version = "1.45.1", features = ["macros", "full"] }
mry = "0.14"
bon = "3.6"
quick_cache = "0.6.14"
reqwest = { workspace = true, features = ["stream"] }

# Error handling strategy
miette = { version = "7.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
apollo-router-error = { path = "../apollo-router-error" }
linkme = "0.3"

# Optional: For procedural macros if we want custom error code generation
syn = { version = "2.0", optional = true, features = ["full"] }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

[dev-dependencies]
insta.workspace = true
tokio-test = "0.4.4"
tower-test = "0.4.0"
wiremock = "0.6"

[features]
default = ["registry"]
registry = ["apollo-router-error/registry"]
# ... existing features ...
error-code-generation = ["syn", "quote", "proc-macro2"]