[package]
name = "apollo-router-error-derive"
version = "0.1.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
repository = "https://github.com/apollographql/router-core/"
documentation = "https://docs.rs/apollo-router-core"
description = "Macros to support error handling"
license = "Elastic-2.0"
edition = "2024"

[lib]
proc-macro = true

[features]
default = []
registry = []

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
thiserror = "2.0"
miette = { version = "7.6", features = ["derive"] }
serde_json = "1.0"
macrotest = "1.0"
apollo-router-error = { path = "../apollo-router-error" }