[package]
name = "apollo-router-error"
version = "0.1.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
repository = "https://github.com/apollographql/router-error/"
documentation = "https://docs.rs/apollo-router-core"
description = "Errors traits and registry access"
license = "Elastic-2.0"
edition = "2024"

[dependencies]
apollo-router-error-derive = { version = "0.1.0", path = "../apollo-router-error-derive" }
linkme = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
miette = { version = "7.6", features = ["derive"] }
thiserror = "2.0"

[features]
default = ["registry"]
registry = []
