[package]
name = "apollo-router-scaffold"
version = "1.45.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2021"
license = "Elastic-2.0"
publish = false

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
cargo-scaffold = { version = "0.11.0", default-features = false }
regex = "1"
str_inflector = "0.12.0"
toml = "0.8.10"
[dev-dependencies]
tempfile = "3.10.0"
copy_dir = "0.1.3"
