[package]
name = "apollo-router"
version = "1.45.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
repository = "https://github.com/apollographql/router/"
documentation = "https://docs.rs/apollo-router"
description = "A configurable, high-performance routing runtime for Apollo Federation 🚀"
license = "Elastic-2.0"

# renovate-automation: rustc version
rust-version = "1.72.0"
edition = "2021"
build = "build/main.rs"

[[bin]]
name = "router"
path = "src/main.rs"
# Don’t recompile main.rs to run unit tests, there aren’t any there:
test = false

[lib]
# Disabled as they are low value compared to the pathological amount of time and RAM
# needed to link an executable for each individual doctest:
doctest = false

[features]
default = ["global-allocator"]

# Set the Rust global allocator on some platforms
# https://doc.rust-lang.org/std/alloc/index.html#the-global_allocator-attribute
# Enabled by default. Disable default features in library crates or to set it yourself:
# ```
# [dependencies]
# apollo-router = {version = "1.20", default-features = false}
# ```
global-allocator = []

# if you are doing heap profiling
dhat-heap = ["dhat"]
dhat-ad-hoc = ["dhat"]

# Prevents the query execution to continue if any error occurs while fetching
# the data of a subgraph. This is useful in development as you want to be
# alerted early when something is wrong instead of receiving an invalid result.
failfast = []

# Enables usage of tokio-console with the router
# tokio-console also requires at build time the environment variable
# RUSTFLAGS="--cfg tokio_unstable"
console = ["tokio/tracing", "console-subscriber"]

# "fake" feature to disable V8 usage when building on docs.rs
# See https://github.com/apollographql/federation-rs/pull/185
docs_rs = ["router-bridge/docs_rs"]

# Enables the use of new telemetry features that are under development
# and not yet ready for production use.
telemetry_next = []

[package.metadata.docs.rs]
features = ["docs_rs"]

[dependencies]
askama = "0.12.1"
access-json = "0.1.0"
anyhow = "1.0.80"
apollo-compiler.workspace = true
apollo-federation = "=0.0.11"
arc-swap = "1.6.0"
async-channel = "1.9.0"
async-compression = { version = "0.4.6", features = [
    "tokio",
    "brotli",
    "gzip",
    "deflate",
] }
async-trait.workspace = true
axum = { version = "0.6.20", features = ["headers", "json", "original-uri"] }
base64 = "0.21.7"
bloomfilter = "1.0.13"
buildstructor = "0.5.4"
bytes = "1.5.0"
clap = { version = "4.5.1", default-features = false, features = [
    "env",
    "derive",
    "std",
    "help",
] }
console-subscriber = { version = "0.2.0", optional = true }
cookie = { version = "0.18.0", default-features = false }
ci_info = { version = "0.14.14", features = ["serde-1"] }
dashmap = { version = "5.5.3", features = ["serde"] }
derivative = "2.2.0"
derive_more = { version = "0.99.17", default-features = false, features = [
    "from",
    "display",
] }
dhat = { version = "0.3.3", optional = true }
diff = "0.1.13"
directories = "5.0.1"
displaydoc = "0.2"
flate2 = "1.0.28"
fred = { version = "7.1.2", features = ["enable-rustls"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
graphql_client = "0.13.0"
hex = { version = "0.4.3", features = ["serde"] }
http.workspace = true
http-body = "0.4.6"
heck = "0.4.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper = { version = "0.14.28", features = ["server", "client", "stream"] }
hyper-rustls = { version = "0.24.2", features = ["http1", "http2"] }
indexmap = { version = "2.2.3", features = ["serde"] }
itertools = "0.12.1"
jsonpath_lib = "0.3.0"
jsonpath-rust = "0.3.5"
jsonschema = { version = "0.17.1", default-features = false }
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
libc = "0.2.153"
linkme = "0.3.23"
lru = "0.12.2"
maplit = "1.0.2"
mediatype = "0.19.18"
mockall = "0.11.4"
mime = "0.3.17"
multer = "2.1.0"
multimap = "0.9.1"
# To avoid tokio issues
notify = { version = "6.1.1", default-features = false, features = [
    "macos_kqueue",
] }
nu-ansi-term = "0.49"
once_cell = "1.19.0"

# Any package that starts with `opentelemetry` needs to be updated with care
# because it is tightly intertwined with the `tracing` packages on account of
# the `opentelemetry-tracing` package.
#
# We are constrained in our ability to update the `tracing` packages and that is
# tracked in https://github.com/apollographql/router/issues/1407.
#
# To codify this with code, a rule in our Renovate configuration constraints and
# groups `^tracing` and `^opentelemetry*` dependencies together as of
# https://github.com/apollographql/router/pull/1509.  A comment which exists
# there (and on `tracing` packages below) should be updated should this change.
opentelemetry = { version = "0.20.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.20.0", default-features = false, features = ["trace"] }
opentelemetry_api = "0.20.0"
opentelemetry-aws = "0.8.0"
opentelemetry-datadog = { version = "0.8.0", features = ["reqwest-client"] }
opentelemetry-http = "0.9.0"
opentelemetry-jaeger = { version = "0.19.0", features = [
    "collector_client",
    "reqwest_collector_client",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.13.0", default-features = false, features = [
    "grpc-tonic",
    "gzip-tonic",
    "tonic",
    "tls",
    "http-proto",
    "metrics",
    "reqwest-client",
] }
opentelemetry-semantic-conventions = "0.12.0"
opentelemetry-zipkin = { version = "0.18.0", default-features = false, features = [
    "reqwest-client",
    "reqwest-rustls",
] }
opentelemetry-prometheus = "0.13.0"
paste = "1.0.14"
pin-project-lite = "0.2.13"
prometheus = "0.13"
prost = "0.12.3"
prost-types = "0.12.3"
proteus = "0.5.0"
rand = "0.8.5"
rhai = { version = "=1.17.1", features = ["sync", "serde", "internals"] }
regex = "1.10.3"
reqwest.workspace = true

# note: this dependency should _always_ be pinned, prefix the version with an `=`
router-bridge = "=0.5.20+v2.7.4"

rust-embed = "8.2.0"
rustls = "0.21.11"
rustls-native-certs = "0.6.3"
rustls-pemfile = "1.0.4"
schemars.workspace = true
shellexpand = "3.1.0"
sha2 = "0.10.8"
semver = "1.0.22"
serde.workspace = true
serde_derive_default = "0.1"
serde_json_bytes.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
serde_yaml = "0.8.26"
static_assertions = "1.1.0"
strum_macros = "0.25.3"
sys-info = "0.9.1"
thiserror = "1.0.57"
tokio.workspace = true
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-util = { version = "0.7.10", features = ["net", "codec", "time"] }
tonic = { version = "0.9.2", features = [
    "transport",
    "tls",
    "tls-roots",
    "gzip",
] }
tower.workspace = true
tower-http = { version = "0.4.4", features = [
    "add-extension",
    "trace",
    "cors",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "decompression-br",
    "decompression-deflate",
    "decompression-gzip",
    "timeout",
] }
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-core = "0.1.31"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
trust-dns-resolver = "0.23.2"
url = { version = "2.5.0", features = ["serde"] }
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
yaml-rust = "0.4.5"
wiremock = "0.5.22"
wsl = "0.1.0"
tokio-tungstenite = { version = "0.20.1", features = [
    "rustls-tls-native-roots",
] }
tokio-rustls = "0.24.1"
http-serde = "1.1.3"
hmac = "0.12.1"
parking_lot = { version = "0.12.1", features = ["serde"] }
memchr = "2.7.1"
brotli = "3.4.0"
zstd = "0.13.0"
zstd-safe = "7.0.0"
# note: AWS dependencies should always use the same version
aws-sigv4 = "1.1.6"
aws-credential-types = "1.1.6"
aws-config = "1.1.6"
aws-types = "1.1.6"
aws-smithy-runtime-api = { version = "1.1.6", features = ["client"] }
sha1 = "0.10.6"
tracing-serde = "0.1.3"
time = { version = "0.3.34", features = ["serde"] }
similar = { version = "2.4.0", features = ["inline"] }
console = "0.15.8"
bytesize = { version = "1.3.0", features = ["serde"] }

[target.'cfg(macos)'.dependencies]
uname = "0.1.1"

[target.'cfg(unix)'.dependencies]
uname = "0.1.1"
hyperlocal = { version = "0.8.0", default-features = false, features = [
    "client",
] }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
axum = { version = "0.6.20", features = [
    "headers",
    "json",
    "original-uri",
    "ws",
] }
ecdsa = { version = "0.16.9", features = ["signing", "pem", "pkcs8"] }
fred = { version = "7.1.2", features = ["enable-rustls", "mocks"] }
futures-test = "0.3.30"
insta = { version = "1.35.1", features = ["json", "redactions", "yaml"] }
maplit = "1.0.2"
memchr = { version = "2.7.1", default-features = false }
mockall = "0.11.4"
num-traits = "0.2.18"
once_cell.workspace = true
opentelemetry-stdout = { version = "0.1.0", features = ["trace"] }
opentelemetry = { version = "0.20.0", features = ["testing"] }
opentelemetry-proto = { version = "0.5.0", features = [
    "metrics",
    "trace",
    "gen-tonic-messages",
    "with-serde",
] }
p256 = "0.13.2"
rand_core = "0.6.4"
reqwest = { version = "0.11.24", default-features = false, features = [
    "json",
    "multipart",
    "stream",
] }
rhai = { version = "1.17.1", features = [
    "sync",
    "serde",
    "internals",
    "testing-environ",
] }
serial_test = { version = "3.0.0" }
tempfile = "3.10.0"
test-log = { version = "0.2.14", default-features = false, features = [
    "trace",
] }
test-span = "0.7"
basic-toml = "0.1"
tower-test = "0.4.0"

# See note above in this file about `^tracing` packages which also applies to
# these dev dependencies.
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
tracing-opentelemetry = "0.21.0"
tracing-test = "0.2.4"
walkdir = "2.4.0"
wiremock = "0.5.22"

[target.'cfg(target_os = "linux")'.dev-dependencies]
rstack = { version = "0.3.3", features = ["dw"], default-features = false }

[target.'cfg(unix)'.dev-dependencies]
hyperlocal = { version = "0.8.0", default-features = false, features = [
    "client",
    "server",
] }

[build-dependencies]
tonic-build = "0.9.2"
basic-toml = "0.1"
serde_json.workspace = true

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[bench]]
name = "huge_requests"
harness = false

[[bench]]
name = "deeply_nested"
harness = false

[[example]]
name = "planner"
